refactoring to get Jquery plugin

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <script type="text/javascript">
         $(function(){
-            customSliders.init();
+            $("#actu_slides").customSliders();
         });
     </script>
 
@@ -80,7 +80,7 @@
         <div class="span">bloc 62</div>
         <div class="span">bloc 63</div>
     </div>
-    <button class="prev_slide" style="display:none;">prev</button>
+    <button class="prev_slide">prev</button>
     <button class="next_slide">next</button>
 </body>
 
