integrate #position absolute# concept

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <script src="./app.js" type="text/javascript"></script>
 
     <script type="text/javascript">
+        var myplugin = "";
         $(function(){
-            $("#actu_slides").customSliders();
+           myplugin = $("#actu_slides").customSliders();
+           var test = "skglskf";
         });
     </script>
 
