--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="./bootstrap.css" type="text/css" rel="stylesheet">
     <link href="./app.css" type="text/css" rel="stylesheet">
     <script src="./jquery-1.10.1.js" type="text/javascript"></script>
-    <script src="./app.js" type="text/javascript"></script>
+    <script src="./jquery.customSliders.js" type="text/javascript"></script>
 
     <script type="text/javascript">
         var myplugin = "";
