allow to set counter as parameter

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <script type="text/javascript">
         var myplugin = "";
         $(function(){
-           myplugin = $("#actu_slides").customSliders();
-           var test = "skglskf";
+            var params = {
+              "counter" : 10,
+            };
+           myplugin = $("#actu_slides").customSliders(params);
         });
     </script>
 
