add update function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         var myplugin = "";
         $(function(){
             var params = {
-              "counter" : 10,
+              "counter" : 6,
+              "delayIncrement" : 0,
+              "difference" : 40,
             };
            myplugin = $("#actu_slides").customSliders(params);
         });
