--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
               "delayIncrement" : 30,
               "difference" : 40,
             };
-           myplugin = $("#actu_slides").customSliders(params);
+           myplugin = $("#slider").customSliders(params);
         });
     </script>
 
 </head>
 <body>
-    <div id="actu_slides" class="bloc_actus">
+    <div id="slider" class="customSliders">
         <div class="span">bloc 1</div>
         <div class="span">bloc 2</div>
         <div class="span">bloc 3</div>
